--- a/package.json
+++ b/package.json
@@ -6,10 +6,33 @@
   "scripts": {
     "start": "node index.js"
   },
-  "author": "Zacck Osiemo",
-  "license":  "MIT",
+  "author": "Mark Pundsack",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.13.3"
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "deep-freeze-strict": "^1.1.1",
+    "expect": "^1.20.2",
+    "express": "^4.13.3",
+    "firebase": "^3.6.0",
+    "foundation-sites": "^6.2.4",
+    "jquery": "^3.1.1",
+    "moment": "^2.16.0",
+    "node-sass": "^3.11.3",
+    "node-uuid": "^1.4.7",
+    "react": "^15.3.2",
+    "react-addons-test-utils": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-redux": "^4.4.5",
+    "react-router": "^3.0.0",
+    "redux": "^3.6.0",
+    "redux-mock-store": "^1.2.1",
+    "redux-thunk": "^2.1.0",
+    "sass-loader": "^4.0.2",
+    "script-loader": "^0.7.0",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.12.13"
   },
   "engines": {
     "node": "4.4.5"
@@ -23,10 +46,8 @@
     "heroku",
     "express"
   ],
-  "author": "Mark Pundsack",
   "contributors": [
     "Zeke Sikelianos <zeke@sikelianos.com> (http://zeke.sikelianos.com)",
     "Jacques Crocker <jacques@nodeknockout.com> (https://www.nodeknockout.com)"
-  ],
-  "license": "MIT"
+  ]
 }
