--- a/package.json
+++ b/package.json
@@ -47,7 +47,16 @@
     "express"
   ],
   "contributors": [
-    "Zeke Sikelianos <zeke@sikelianos.com> (http://zeke.sikelianos.com)",
+    "Zacck Osiemo <coderv63@gmail.com> (https://github.com/zacck)",
     "Jacques Crocker <jacques@nodeknockout.com> (https://www.nodeknockout.com)"
-  ]
+  ],
+  "devDependencies": {
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.0",
+    "mocha": "^3.1.2"
+  }
 }
