--- a/package.json
+++ b/package.json
@@ -4,35 +4,41 @@
   "description": "Find your Vibe around you!",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "test": "NODE_ENV=test karma start",
+    "build": "webpack",
+    "start": " npm run build && node server.js"
   },
   "author": "Mark Pundsack",
   "license": "MIT",
   "dependencies": {
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "deep-freeze-strict": "^1.1.1",
-    "expect": "^1.20.2",
-    "express": "^4.13.3",
-    "firebase": "^3.6.0",
-    "foundation-sites": "^6.2.4",
-    "jquery": "^3.1.1",
-    "moment": "^2.16.0",
-    "node-sass": "^3.11.3",
-    "node-uuid": "^1.4.7",
-    "react": "^15.3.2",
-    "react-addons-test-utils": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-redux": "^4.4.5",
-    "react-router": "^3.0.0",
-    "redux": "^3.6.0",
-    "redux-mock-store": "^1.2.1",
-    "redux-thunk": "^2.1.0",
-    "sass-loader": "^4.0.2",
-    "script-loader": "^0.7.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.12.13"
+      "babel-core": "^6.5.1",
+      "babel-loader": "^6.2.2",
+      "babel-preset-es2015": "^6.5.0",
+      "babel-preset-react": "^6.5.0",
+      "babel-preset-stage-0": "^6.5.0",
+      "css-loader": "^0.23.1",
+      "deep-freeze-strict": "^1.1.1",
+      "expect": "^1.14.0",
+      "express": "^4.14.0",
+      "firebase": "^3.0.2",
+      "foundation-sites": "^6.2.0",
+      "jquery": "^2.2.1",
+      "moment": "^2.12.0",
+      "node-env-file": "^0.1.8",
+      "node-sass": "^3.4.2",
+      "node-uuid": "^1.4.7",
+      "react": "^0.14.7",
+      "react-addons-test-utils": "^0.14.6",
+      "react-dom": "^0.14.7",
+      "react-redux": "^4.4.1",
+      "react-router": "^2.0.0",
+      "redux": "^3.3.1",
+      "redux-mock-store": "^1.0.3",
+      "redux-thunk": "^2.1.0",
+      "sass-loader": "^3.1.2",
+      "script-loader": "^0.6.1",
+      "style-loader": "^0.13.0",
+      "webpack": "^1.12.13"
   },
   "engines": {
     "node": "4.4.5"
@@ -52,12 +58,12 @@
     "Marike Cronje"
   ],
   "devDependencies": {
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-mocha": "^1.3.0",
-    "karma-mocha-reporter": "^2.2.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.8.0",
-    "mocha": "^3.1.2"
+    "karma": "^0.13.22",
+   "karma-chrome-launcher": "^0.2.2",
+   "karma-mocha": "^0.2.2",
+   "karma-mocha-reporter": "^2.0.0",
+   "karma-sourcemap-loader": "^0.3.7",
+   "karma-webpack": "^1.7.0",
+   "mocha": "^2.4.5"
   }
 }
