--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "node-env-file": "^0.1.8",
     "node-sass": "^3.4.2",
     "node-uuid": "^1.4.7",
+    "radium": "^0.18.1",
     "react": "^0.14.7",
     "react-addons-test-utils": "^0.14.6",
+    "react-burger-menu": "^1.10.9",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.0",
     "redux": "^3.3.1",
+    "redux-burger-menu": "0.0.5",
     "redux-mock-store": "^1.0.3",
     "redux-thunk": "^2.1.0",
     "sass-loader": "^3.1.2",
