--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-addons-test-utils": "^0.14.6",
     "react-burger-menu": "^1.10.9",
     "react-dom": "^0.14.7",
+    "react-image-responsive": "^1.0.18",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.0",
     "redux": "^3.3.1",
