--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "deep-freeze-strict": "^1.1.1",
     "expect": "^1.14.0",
     "express": "^4.14.0",
+    "file-loader": "^0.9.0",
     "firebase": "^3.0.2",
     "foundation-sites": "^6.2.0",
     "geofire": "^4.1.2",
@@ -33,7 +34,6 @@
     "react-addons-test-utils": "^0.14.6",
     "react-burger-menu": "^1.10.9",
     "react-dom": "^0.14.7",
-    "react-image-responsive": "^1.0.18",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.0",
     "redux": "^3.3.1",
@@ -43,6 +43,7 @@
     "sass-loader": "^3.1.2",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.13"
   },
   "engines": {
