--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node-env-file": "^0.1.8",
     "node-sass": "^3.4.2",
     "node-uuid": "^1.4.7",
+    "offline-plugin": "^3.4.2",
     "radium": "^0.18.1",
     "react": "^0.14.7",
     "react-addons-test-utils": "^0.14.6",
