--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-addons-test-utils": "^0.14.6",
     "react-burger-menu": "^1.10.9",
     "react-dom": "^0.14.7",
+    "react-dynamic-modal": "^1.1.1",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.0",
     "redux": "^3.3.1",
