--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Mark Pundsack",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.15.2",
     "babel-core": "^6.5.1",
     "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.5.0",
